# discord-bot

./: .gitignore  .replit  DumptyBotv7-noslash.py  botv13.py  config.py  config_template.py  constants.py  discord_search.py  fake_cricket.py  fcbb.py  fcfb.py  fcfb_play_by_play.py  gitignore  ludabot.py  main.py  mln_play_by_play.py  mln_scout.py  mlr_play_by_play.py  mlr_scoreboard.py  mlr_scout.py  mlr_shadowball.py  mlrscoutbot.py  pbp.py  play_by_play.py  play_by_play_fcfb.py  play_by_play_mln.py  pyproject.toml  requirements.txt  scoreboard.py  scoutbotmln.py  shadowballbot.py
backups/: mlr.py
cogs/: mlr.py
cogs_ludabot/: batters.py  general.py  mlr.py  other.py  pitchers.py  scoutbot.py
cogs_mln_scout/: batters.py  general.py  pitchers.py  self_scouting_pitcher.py
cogs_mlr_scout/: batters.py  general.py
cogs_mlr_shadowball/: beerpong.py  shadowball.py
cogs_mlrscoutbot/: pitchers.py
cogs_scoutbotmln/: batters.py  general.py  pitchers.py  self_scouting_pitcher.py
cogs_shadowballbot/: beerpong.py  shadowball.py
controllers/: sheets_reader.py
